Added clubs statistics

--- a/src/utils/colors.scss
+++ b/src/utils/colors.scss
@@ -1,5 +1,6 @@
 $main-background-color: #333;
 $lighten-background-color: lighten(#333, 10%);
+$darken-background-color: darken(#333, 10%);
 
 $main-strava-color: #fc4c02;
 $darken-strava-color: darken(#fc4c02, 10%);
